--- a/mws-restaurant-stage-1/restaurant.html
+++ b/mws-restaurant-stage-1/restaurant.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/> 
   <title>Restaurant Info</title>
 </head>
 
@@ -21,7 +21,7 @@
       <h1 tabindex="0" role="header"><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" aria-label="link to home page">
+    <ul id="breadcrumb" role="navigation" aria-label="link to home page">
       <li><a href="/" tabindex="0" role="navigation">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
